--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "express": "^4.16.3",
     "pg": "^7.4.3",
     "sequelize": "^4.38.0"
+  },
+  "script": {
+    "start": "node index.js"
   }
+  
 }
