--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.4.0",
     "pg": "^7.4.3",
     "sequelize": "^4.38.0"
   },
   "scripts": {
     "start": "node index.js"
   }
-  
 }
